refactor: fixed error handling; removed unnecessary fields
